Website Menu Color Change

--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,10 @@
                   <img src="interview-removebg-preview.png">
                   </div>
                   <div class="Menu-Reviews">
-                        
+                  <p1>"<em>Easy to find what kind of job you are looking for  <br> and hassel free</em>" - Spider-Man</p1>
+                  <p2>"<em>Had some trouble with keeping a job until i found a job <br> on this site</em>" - Albert Einstein</p2>
+                  <p3>"<em>Found my very first job on this site, would <br> highly recommend</em>" - Bucky<p3>
+                   
                   </div>
 
             </div>
