--- a/Index.html
+++ b/Index.html
@@ -15,15 +15,15 @@
                   </div>
                   <h2><strong>Find your next job with us</strong></h2>
                   <div class="container">
-                    <div class="citem1 container-items">"<em>Easy to find what kind of job you are <br> looking for and hassel free</em>" - Spider-Man
+                    <div class="citem1 container-items">"<em>Easy to find what kind of job you are looking for and hassel free</em>" - Spider-Man
                     <a href="https://www.marvel.com/characters/spider-man-peter-parker" target="_blank"><img class="menu-image" src="SpiderMan.png" alt="SpiderMan">
                     </a>
                   </div>
-                    <div class="citem2 container-items">"<em>Had some trouble with keeping a job until i found a  <br> job on this site</em>" - Albert Einstein
+                    <div class="citem2 container-items">"<em>Had some trouble with keeping a job until i found a job on this site</em>" - Albert Einstein
                     <a href="https://en.wikipedia.org/wiki/Albert_Einstein" target="_blank"><img class="menu-image" src="Albert.png" alt="Albert">
                     </a>
                     </div>
-                    <div class="citem3 container-items">"<em>Found my very first job on this site, would <br> highly recommend</em>" - Bucky
+                    <div class="citem3 container-items">"<em>Found my very first job on this site, would highly recommend</em>" - Bucky
                       <a href="https://www.marvel.com/characters/winter-soldier-bucky-barnes" target="_blank"><img class="menu-image" src="WinterSoldier.png" alt="WinterSoldier">
                       </a>
                     </div>
@@ -83,7 +83,6 @@
        </div>
 </div>
 </head>
-
      <div>
         <p1>"<em>Easy to find what kind of job you are looking for  <br> and hassel free</em>" - Spider-Man</p1>
         <p2>"<em>Had some trouble with keeping a job until i found a job <br> on this site</em>" - Albert Einstein</p2>
