Fixed Stretched Image

--- a/Index.html
+++ b/Index.html
@@ -16,16 +16,22 @@
                   <h2><strong>Find your next job with us</strong></h2>
                   <div class="container">
                     <div class="citem1 container-items">"<em>Easy to find what kind of job you are looking for and hassel free</em>" - Spider-Man
-                    <a href="https://www.marvel.com/characters/spider-man-peter-parker" target="_blank"><img class="menu-image" src="SpiderMan.png" alt="SpiderMan">
+                      <div class="menu-image">
+                    <a href="https://www.marvel.com/characters/spider-man-peter-parker" target="_blank"><img src="SpiderMan.png" alt="SpiderMan">
                     </a>
+                      </div>
                   </div>
                     <div class="citem2 container-items">"<em>Had some trouble with keeping a job until i found a job on this site</em>" - Albert Einstein
-                    <a href="https://en.wikipedia.org/wiki/Albert_Einstein" target="_blank"><img class="menu-image" src="Albert.png" alt="Albert">
+                      <div class="menu-image">
+                    <a href="https://en.wikipedia.org/wiki/Albert_Einstein" target="_blank"><img src="Albert.png" alt="Albert">
                     </a>
+                      </div>
                     </div>
                     <div class="citem3 container-items">"<em>Found my very first job on this site, would highly recommend</em>" - Bucky
-                      <a href="https://www.marvel.com/characters/winter-soldier-bucky-barnes" target="_blank"><img class="menu-image" src="WinterSoldier.png" alt="WinterSoldier">
+                      <div class="menu-image">
+                      <a href="https://www.marvel.com/characters/winter-soldier-bucky-barnes" target="_blank"><img src="WinterSoldier.png" alt="WinterSoldier">
                       </a>
+                      </div>
                     </div>
                   </div>
                   <div class="container1">
