Changed html links to css file

--- a/Temp.html
+++ b/Temp.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="Main.css" rel="stylesheet" />
+    <link href="Style.css" rel="stylesheet" />
   </head>
   <div>
     <a href="Index.html" class="alt">Back</a>
