--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <link href="Main.css" rel="stylesheet" />
+      <link href="Style.css" rel="stylesheet" />
    </head>
    <body class="login-body">
     <div class="login-content">
