--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <html>
-<link href="Main.css" rel="stylesheet">
+<link href="Style.css" rel="stylesheet">
       <head>
    <body class="Menu-body">
             <div class="Menu-Content">
