--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <html>
 <link href="Style.css" rel="stylesheet">
+  <title>Job Finder</title>
       <head>
    <body class="Menu-body">
             <div class="Menu-Content">
